--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>grade-api</artifactId>
+    <artifactId>CSC207-Project</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
@@ -15,7 +15,11 @@
             <artifactId>json</artifactId>
             <version>20230618</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.miglayout</groupId>
+            <artifactId>miglayout-swing</artifactId>
+            <version>4.2</version>
+        </dependency>
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
